--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ byteorder = "1.5.0"
 chrono = "0.4.38"
 clap = "4.5.21"
 dotenvy = "0.15.7"
+paste = "1.0.15"
 regex = "1.11.1"
 rocksdb = { version = "0.22.0", features = ["multi-threaded-cf"] }
 tokio = { version = "1.41.1", features = ["full"] }
