--- a/middleman/Cargo.toml
+++ b/middleman/Cargo.toml
@@ -4,10 +4,12 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+bitflags = "2.8.0"
 byteorder = "1.5.0"
 chrono = "0.4.38"
 clap = "4.5.21"
 dotenvy = "0.15.7"
+middleman_macros = { version = "0.1.0", path = "../middleman_macros" }
 paste = "1.0.15"
 regex = "1.11.1"
 rocksdb = { version = "0.22.0", features = ["multi-threaded-cf"] }
