--- a/middleman/Cargo.toml
+++ b/middleman/Cargo.toml
@@ -8,9 +8,13 @@ bitflags = "2.8.0"
 byteorder = "1.5.0"
 chrono = "0.4.38"
 clap = "4.5.21"
+dashmap = "6.1.0"
 dotenvy = "0.15.7"
+hyper = { version = "1.5.2", features = ["http1", "http2", "client"] }
 middleman_macros = { version = "0.1.0", path = "../middleman_macros" }
+parking_lot = "0.12.3"
 paste = "1.0.15"
+rand = "0.9.0"
 regex = "1.11.1"
 rocksdb = { version = "0.22.0", features = ["multi-threaded-cf"] }
 tokio = { version = "1.41.1", features = ["full"] }
@@ -20,3 +24,6 @@ uuid = { version = "1.11.0", features = ["v4"] }
 
 [dev-dependencies]
 tempfile = "3.14.0"
+
+[profile.dev.package.parking_lot]
+features = ["deadlock_detection"]
