--- a/middleman/Cargo.toml
+++ b/middleman/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 axum = "0.8.1"
 bitflags = "2.8.0"
 byteorder = "1.5.0"
+byteview = "0.5.3"
 chrono = "0.4.38"
 clap = "4.5.21"
 compact_str = "0.8.1"
