--- a/middleman/Cargo.toml
+++ b/middleman/Cargo.toml
@@ -14,7 +14,6 @@ compact_str = "0.8.1"
 dashmap = "6.1.0"
 dotenvy = "0.15.7"
 env_logger = "0.11.6"
-hyper = { version = "1.5.2", features = ["http1", "http2", "client"] }
 log = "0.4.25"
 middleman_macros = { version = "0.1.0", path = "../middleman_macros" }
 middleman_db = { version = "0.1.0", path = "../middleman_db" }
@@ -31,6 +30,12 @@ strum_macros = "0.27.0"
 tokio = { version = "1.41.1", features = ["full"] }
 url = "2.5.4"
 uuid = { version = "1.11.0", features = ["v4", "serde"] }
+serde_json = "1.0.140"
+hyper = { version = "1.6.0", features = ["client", "http1"] }
+hyper-util = { version = "0.1.10", features = ["client", "client-legacy", "tokio"] }
+tokio-native-tls = "0.3.1"
+tower = "0.5.2"
+http-body-util = "0.1.3"
 
 [dev-dependencies]
 tempfile = "3.14.0"
