--- a/middleman/Cargo.toml
+++ b/middleman/Cargo.toml
@@ -36,6 +36,8 @@ hyper-util = { version = "0.1.10", features = ["client", "client-legacy", "tokio
 tokio-native-tls = "0.3.1"
 tower = "0.5.2"
 http-body-util = "0.1.3"
+atomicbox = "0.4.0"
+either = "1.15.0"
 
 [dev-dependencies]
 tempfile = "3.14.0"
