--- a/middleman/Cargo.toml
+++ b/middleman/Cargo.toml
@@ -20,7 +20,6 @@ middleman_db = { version = "0.1.0", path = "../middleman_db" }
 owning_ref = "0.4.1"
 parking_lot = "0.12.3"
 paste = "1.0.15"
-rand = "0.9.0"
 regex = "1.11.1"
 rocksdb = { version = "0.23.0", features = ["multi-threaded-cf"] }
 serde = "1.0.217"
@@ -38,6 +37,11 @@ tower = "0.5.2"
 http-body-util = "0.1.3"
 atomicbox = "0.4.0"
 either = "1.15.0"
+http = "1.3.1"
+crc32fast = "1.4.2"
+hmac = "0.12.1"
+sha2 = "0.10.8"
+hex = "0.4.3"
 
 [dev-dependencies]
 tempfile = "3.14.0"
