--- a/middleman/Cargo.toml
+++ b/middleman/Cargo.toml
@@ -43,6 +43,9 @@ hmac = "0.12.1"
 sha2 = "0.10.8"
 hex = "0.4.3"
 rand = "0.9.0"
+tracing = "0.1.41"
+tracing-subscriber = "0.3.19"
+tower-http = { version = "0.6.2", features = ["trace"] }
 
 [dev-dependencies]
 tempfile = "3.14.0"
