--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
+LOG_LEVEL=debug
 MIDDLEMAN_DB_DIR=/home/mattmcal/.config/middleman/db
+MIDDLEMAN_INGESTION_DB_URL=sqlite:///home/mattmcal/pastes/middleman.sqlite
+MIDDLEMAN_INGESTION_DB_TABLE=events
