--- a/middleman/Cargo.toml
+++ b/middleman/Cargo.toml
@@ -9,7 +9,7 @@ bitflags = "2.8.0"
 byteorder = "1.5.0"
 byteview = "0.5.3"
 chrono = "0.4.38"
-clap = "4.5.21"
+clap = { version = "4.5.21", features = ["derive"] }
 compact_str = "0.8.1"
 dashmap = "6.1.0"
 dotenvy = "0.15.7"
@@ -43,11 +43,13 @@ hmac = "0.12.1"
 sha2 = "0.10.8"
 hex = "0.4.3"
 rand = "0.9.0"
+sqlx = { version = "0.8.3", features = ["runtime-tokio", "tls-native-tls", "sqlite", "mysql", "postgres"] }
 tracing = "0.1.41"
 tracing-subscriber = "0.3.19"
 tower-http = { version = "0.6.2", features = ["trace"] }
 
 [dev-dependencies]
+statrs = "0.18.0"
 tempfile = "3.14.0"
 
 [dev-dependencies.parking_lot]
