Fix todos and add unit test

--- a/middleman/Cargo.toml
+++ b/middleman/Cargo.toml
@@ -63,3 +63,6 @@ features = ["full", "test-util", "tracing"]
 [dev-dependencies.axum]
 version = "0.8.1"
 features = ["macros"]
+
+[profile.release]
+panic = 'abort'
