--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 LOG_LEVEL=debug
 MIDDLEMAN_DB_DIR=/home/mattmcal/.config/middleman/db
-MIDDLEMAN_INGESTION_DB_URL=sqlite:///home/mattmcal/pastes/middleman.sqlite
+#MIDDLEMAN_INGESTION_DB_URL=sqlite:///home/mattmcal/pastes/middleman.sqlite
+MIDDLEMAN_INGESTION_DB_URL=postgres://mattmcal:@localhost/middleman
 MIDDLEMAN_INGESTION_DB_TABLE=events
