--- a/rustfmt.toml
+++ b/rustfmt.toml
@@ -1,5 +1,6 @@
 match_block_trailing_comma = true
 single_line_if_else_max_width = 99
 single_line_let_else_max_width = 99
+fn_call_width = 99
 imports_granularity = "Module"
 chain_width = 99
