--- a/middleman/Cargo.toml
+++ b/middleman/Cargo.toml
@@ -46,7 +46,7 @@ tracing = "0.1.41"
 tracing-subscriber = "0.3.19"
 tower-http = { version = "0.6.2", features = ["trace"] }
 bytecast = { version = "0.1.0", path = "../bytecast" }
-bytecast_derive = { version = "0.1.0", path = "../bytecast_derive" }
+cast = { version = "0.1.0", path = "../cast" }
 
 [dev-dependencies]
 statrs = "0.18.0"
