Proper config loading

--- a/.env
+++ b/.env
@@ -1,5 +1,10 @@
 LOG_LEVEL=debug
-MIDDLEMAN_DB_DIR=/home/mattmcal/.config/middleman/db
+MIDDLEMAN_DATA_DIR=/home/mattmcal/.config/middleman
+MIDDLEMAN_PRODUCER_API_HOST = 127.0.0.1
+MIDDLEMAN_PRODUCER_API_PORT = 8081
+MIDDLEMAN_CONSUMER_API_HOST = 127.0.0.1
+MIDDLEMAN_CONSUMER_API_PORT = 8080
+MIDDLEMAN_CONSUMER_AUTH_SECRET = lolsosecret
 #MIDDLEMAN_INGESTION_DB_URL=sqlite:///home/mattmcal/pastes/middleman.sqlite
-MIDDLEMAN_INGESTION_DB_URL=postgres://mattmcal:@localhost/middleman
-MIDDLEMAN_INGESTION_DB_TABLE=events
+#MIDDLEMAN_INGESTION_DB_URL=postgres://mattmcal:@localhost/middleman
+#MIDDLEMAN_INGESTION_DB_TABLE=events
