--- a/middleman/Cargo.toml
+++ b/middleman/Cargo.toml
@@ -48,6 +48,7 @@ tower-http = { version = "0.6.2", features = ["trace"] }
 bytecast = { version = "0.1.0", path = "../bytecast" }
 cast = { version = "0.1.0", path = "../cast" }
 jsonwebtoken = "9.3.1"
+toml = "0.8.20"
 
 [dev-dependencies]
 reqwest = "0.12.15"
